Fixed overflow, fixed waveform height, fixed ugly barwidth

--- a/css/customStyle.css
+++ b/css/customStyle.css
@@ -178,7 +178,7 @@ svg {
 }
 
 .wrapper {
-  /* overflow: hidden; */
+  overflow: hidden;
   position: relative
 }
 
